--- a/Day1/index.html
+++ b/Day1/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pratham <i>Goyal</i> CSE-DS A</h1>
+    <h1>Pratham Singla CSE-DS A</h1>
 </body>
 </html>
