--- a/Day1/index.html
+++ b/Day1/index.html
@@ -8,5 +8,54 @@
 </head>
 <body>
     <h1>Pratham Singla CSE-DS A</h1>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <td colspan="2">
+                    <h1>Registration Form</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td><input type="text" name="t1" required></td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td><input type="email" name="t2" required></td>
+            </tr>
+            <tr>
+                <td>Address:</td>
+                <td><textarea rows="3" cols="20" name="t3"></textarea></td>
+            </tr>
+            <tr>
+                <td>Branch: </td>
+                <td>
+                    CSE <input type="radio" name="t4">
+                    CSE-DS <input type="radio" name="t4">
+                    CSE-AIML <input type="radio" name="t4">
+                    IT <input type="radio" name="t4">
+                </td>
+            </tr>
+            <tr>
+                <td>Language</td>
+                <td>
+                    C <input type="checkbox" name="c1" value="C">
+                    C++ <input type="checkbox" name="c2" value="CPP">
+                    Java <input type="checkbox" name="c3" value="Java">
+
+                </td>
+            </tr>
+            <tr>
+                <td>Date of Birth</td>
+                <td><input type="date" name="dob"></td>
+            </tr>
+            <tr>
+                <td>Upload Profile</td>
+                <td><input type="file" name="f1"></td>
+            </tr>
+            <td><input type="submit" value="Register"></td>
+            <td><input type="reset" value="clear"></td>
+        </table>
+    </form>
 </body>
 </html>
