modifications in registration form

--- a/Day1/index.html
+++ b/Day1/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pratham Singla CSE-DS A</h1>
     <form action="" method="post">
-        <table>
+        <table border="2px">
             <tr>
                 <td colspan="2">
                     <h1>Registration Form</h1>
